syntax = "proto3";

option go_package = "pb/game";
import "common/comp.proto";

message Location
{
	double x = 1;
	double y = 2;
	double z = 3;
}

message Rotation
{
	double x = 1;
	double y = 2;
	double z = 3;
}

message Scale
{
	double x = 1;
	double y = 2;
	double z = 3;
}

message Transform
{
	Vector3 location = 1;
	Rotation rotation = 2;
	Scale scale = 3;
}

message Velocity
{
	double x = 1;
	double y = 2;
	double z = 3;
}


message Acceleration 
{
	double x = 1;
	double y = 2;
	double z = 3;
}

//https://blog.codingnow.com/2008/11/aoi_server.html
//视野半径
message ViewRadius
{
	double radius = 1;
}


// 基础属性，仅玩家自己存储
message BaseAttributesPBComponent {
    uint64 strength = 1;  // 力量
    uint64 stamina = 2;   // 耐力
    uint64 health = 3;    // 生命值
    uint64 mana = 4;      // 法力值
}